--- a/index.html
+++ b/index.html
@@ -1,338 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-<title>Admin Support — TrustDollar</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
+<meta charset="UTF-8">
+<title>Admin Script Launcher</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-:root {
-  --green:#00c853;
-  --green-dark:#00bfa5;
-  --bg:#f3f5f9;
-  --card:#fff;
-  --text:#222;
-}
-* { box-sizing:border-box; }
-html, body {
-  margin:0;
-  padding:0;
-  height:100%;
-  font-family:'Poppins',sans-serif;
-  background:var(--bg);
-  color:var(--text);
-  overflow:hidden;
-}
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #1e1e1e;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  }
 
-/* Header */
-.header {
-  background:linear-gradient(135deg,var(--green),var(--green-dark));
-  color:#fff;
-  padding:8px 16px;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  font-size:14px;
-  position:sticky;
-  top:0;
-  z-index:100;
-  height:44px;
-}
-.header h1 {
-  margin:0;
-  font-size:15px;
-  display:flex;
-  align-items:center;
-  gap:6px;
-}
-#adminStatus {
-  background:rgba(255,255,255,0.25);
-  padding:4px 10px;
-  border-radius:10px;
-  font-size:12px;
-}
+  h1 {
+    color: #fdbb2d;
+    margin-bottom: 25px;
+    font-size: 28px;
+  }
 
-/* Layout */
-.container {
-  flex:1;
-  display:flex;
-  height:calc(var(--vh, 1vh) * 100 - 44px);
-  overflow:hidden;
-}
+  /* 🔘 Buttons Grid */
+  .button-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+  }
 
-/* Sidebar */
-.users {
-  width:30%;
-  background:#fff;
-  border-right:1px solid #e5e5e5;
-  overflow-y:auto;
-}
-.user-item {
-  padding:10px 12px;
-  border-bottom:1px solid #f1f1f1;
-  cursor:pointer;
-  position:relative;
-  transition:all 0.2s ease;
-}
-.user-item:hover { background:#f8f9fa; }
-.user-item.selected { background:#e7f9ee; border-left:4px solid var(--green-dark); }
-.user-item b { display:block; font-size:14px; }
-.user-item small { color:#777; font-size:12px; display:block; }
-.red-dot,.green-dot {
-  width:9px; height:9px; border-radius:50%; position:absolute; top:16px; right:12px;
-}
-.red-dot { background:red; }
-.green-dot { background:#00d084; box-shadow:0 0 6px #00d084; }
+  /* 🟨 Buttons styling */
+  .btn {
+    position: relative;
+    padding: 10px 16px;
+    background-color: #333;
+    border: none;
+    color: white;
+    border-radius: 8px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+    white-space: nowrap;
+    min-width: 130px;
+  }
 
-/* Chat */
-.chat {
-  flex:1;
-  display:flex;
-  flex-direction:column;
-  background:var(--bg);
-  height:100%;
-  overflow:hidden;
-}
-.chat-header {
-  background:#fff;
-  padding:10px 16px;
-  border-bottom:1px solid #eee;
-  box-shadow:0 1px 4px rgba(0,0,0,0.05);
-}
-.chat-header h2 { margin:0; font-size:15px; color:var(--green-dark); }
-.chat-header small { font-size:12px; color:#666; }
+  .btn:hover {
+    background-color: #fdbb2d;
+    color: black;
+    transform: scale(1.05);
+  }
 
-.chat-box {
-  flex:1;
-  padding:12px;
-  overflow-y:auto;
-  display:flex;
-  flex-direction:column;
-  scroll-behavior:smooth;
-}
+  /* 🔴 Red dot */
+  .dot {
+    height: 10px;
+    width: 10px;
+    background-color: red;
+    border-radius: 50%;
+    position: absolute;
+    top: 6px;
+    right: 8px;
+  }
 
-/* Messages */
-.msg {
-  max-width:75%;
-  padding:9px 13px;
-  border-radius:14px;
-  margin-bottom:8px;
-  font-size:13px;
-  line-height:1.4;
-  word-break:break-word;
-}
-.user-msg {
-  background:#fff;
-  align-self:flex-start;
-  box-shadow:0 1px 4px rgba(0,0,0,0.05);
-}
-.admin-msg {
-  background:linear-gradient(135deg,var(--green),var(--green-dark));
-  color:#fff;
-  align-self:flex-end;
-}
-.user-msg.unseen { background:#fff4f4; border:1px solid #ffd6d6; }
+  /* 📦 Viewer */
+  .viewer-container {
+    width: 95%;
+    margin: 25px auto 0;
+    border: 4px solid #fdbb2d;
+    border-radius: 12px;
+    background-color: #222;
+    padding: 10px;
+  }
 
-/* Footer */
-.footer {
-  display:flex;
-  padding:10px;
-  background:#fff;
-  border-top:1px solid #eee;
-  align-items:center;
-  position:sticky;
-  bottom:0;
-  left:0;
-  right:0;
-}
-.footer input {
-  flex:1;
-  padding:9px 12px;
-  border:1px solid #ddd;
-  border-radius:8px;
-  font-size:13px;
-}
-.footer input:focus { outline:none; border-color:var(--green); }
-.footer button {
-  margin-left:8px;
-  background:linear-gradient(135deg,var(--green),var(--green-dark));
-  color:#fff;
-  border:none;
-  border-radius:8px;
-  padding:9px 14px;
-  cursor:pointer;
-  font-weight:600;
-  transition:0.2s;
-}
-.footer button:hover { opacity:0.9; }
+  iframe {
+    width: 100%;
+    height: 600px;
+    border: none;
+    border-radius: 10px;
+  }
 
-/* Scrollbars */
-.chat-box::-webkit-scrollbar, .users::-webkit-scrollbar { width:6px; }
-.chat-box::-webkit-scrollbar-thumb, .users::-webkit-scrollbar-thumb {
-  background:var(--green);
-  border-radius:10px;
-}
-
-/* ✅ Mobile Optimization */
-@media(max-width:768px){
-  .users { width:42%; }
-}
-@media(max-width:600px){
-  .users { display:none; }
-  .chat { width:100%; }
-  .header { height:40px; font-size:13px; }
-}
+  /* 📱 Mobile adjustments */
+  @media (max-width: 768px) {
+    body {
+      padding: 10px;
+    }
+    h1 {
+      font-size: 22px;
+    }
+    .btn {
+      font-size: 13px;
+      min-width: 110px;
+      padding: 8px 10px;
+    }
+    iframe {
+      height: 450px;
+    }
+  }
 </style>
 </head>
 <body>
 
-<div class="header">
-  <h1><i class='bx bx-headphone'></i> Support</h1>
-  <div id="adminStatus">🟢 Online</div>
+
+
+<!-- 🔘 Buttons Row -->
+<div class="button-row">
+  <button class="btn" onclick="openFile('goodnews.html','goodnews')">Good News <span class="dot" id="dot-goodnews"></span></button>
+  <button class="btn" onclick="openFile('notyfication.html','notyfication')">Notification <span class="dot" id="dot-notyfication"></span></button>
+  <button class="btn" onclick="openFile('admin-livesupport.html','admin-livesupport')">Admin Live <span class="dot" id="dot-admin-livesupport"></span></button>
+  <button class="btn" onclick="openFile('DepositRequest.html','DepositRequest')">Deposit Request <span class="dot" id="dot-DepositRequest"></span></button>
+  <button class="btn" onclick="openFile('publickannouncment.html','publickannouncment')">Announcement <span class="dot" id="dot-publickannouncment"></span></button>
+  <button class="btn" onclick="openFile('Giftadmin.html','Giftadmin')">Gift Admin <span class="dot" id="dot-Giftadmin"></span></button>
+  <button class="btn" onclick="openFile('announcements.html','announcements')">Announcements <span class="dot" id="dot-announcements"></span></button>
+  <button class="btn" onclick="openFile('WITHROWAL REQUEST.html','WITHROWAL REQUEST')">Withdrawals <span class="dot" id="dot-WITHROWAL REQUEST"></span></button>
+  <button class="btn" onclick="openFile('Userreport.html','Userreport')">User Report <span class="dot" id="dot-Userreport"></span></button>
+  <button class="btn" onclick="openFile('admin-support.html','admin-support')">Support <span class="dot" id="dot-admin-support"></span></button>
+  <button class="btn" onclick="openFile('admin_cleanup.html','admin_cleanup')">Cleanup <span class="dot" id="dot-admin_cleanup"></span></button>
 </div>
 
-<div class="container">
-  <div class="users" id="userList">Loading users...</div>
-  <div class="chat">
-    <div class="chat-header" id="chatHeader">
-      <h2>Select a user</h2><small>Messages will appear here</small>
-    </div>
-    <div class="chat-box" id="chatBox">
-      <div style="text-align:center;color:#888;margin-top:25px;">No chat selected</div>
-    </div>
-    <div class="footer">
-      <input type="text" id="msgInput" placeholder="Type reply...">
-      <button id="sendBtn"><i class='bx bx-send'></i></button>
-    </div>
-  </div>
+<!-- 🖥️ Viewer -->
+<div class="viewer-container">
+  <iframe id="viewer" src=""></iframe>
 </div>
-
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import {
-  getFirestore, collection, doc, updateDoc, addDoc, serverTimestamp,
-  onSnapshot, query, orderBy, setDoc
-} from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-
-const firebaseConfig = {
-  apiKey:"AIzaSyDEQYPJFxQv8yFHptrTqoLHOn2L0PpgVhc",
-  authDomain:"btcinvest-c0e25.firebaseapp.com",
-  projectId:"btcinvest-c0e25",
-  storageBucket:"btcinvest-c0e25.firebasestorage.app",
-  messagingSenderId:"204937458487",
-  appId:"1:204937458487:web:cc27ece1249999279f60b2"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-
-// ✅ Admin status
-await setDoc(doc(db,"supportStatus","admin"),{online:true,typing:false},{merge:true}).catch(()=>{});
-window.addEventListener("beforeunload",()=>setDoc(doc(db,"supportStatus","admin"),{online:false},{merge:true}));
-
-const userList=document.getElementById("userList");
-const chatBox=document.getElementById("chatBox");
-const msgInput=document.getElementById("msgInput");
-const sendBtn=document.getElementById("sendBtn");
-const chatHeader=document.getElementById("chatHeader");
-
-let currentUID=null, typingTimeout;
-
-// ✅ Load all users realtime
-onSnapshot(collection(db,"supportChats"),(snapshot)=>{
-  userList.innerHTML="";
-  if(snapshot.empty){
-    userList.innerHTML="<div style='padding:20px;text-align:center;color:#777;'>No active chats</div>";
-    return;
-  }
-  snapshot.forEach(docSnap=>{
-    const d=docSnap.data();
-    const div=document.createElement("div");
-    div.className="user-item";
-    div.dataset.uid=docSnap.id;
-    let dot="";
-    if(d.newMsg) dot="<span class='red-dot'></span>";
-    else if(d.online) dot="<span class='green-dot'></span>";
-    div.innerHTML=`
-      <b>${d.name||"User"}</b>
-      <small>${d.email||""}${d.typing?" • typing...":""}</small>
-      ${dot}
-    `;
-    div.onclick=()=>loadChat(docSnap.id,d,div);
-    userList.appendChild(div);
-  });
-});
-
-// ✅ Load specific user chat
-function loadChat(uid,userInfo,element){
-  currentUID=uid;
-  document.querySelectorAll(".user-item").forEach(x=>x.classList.remove("selected"));
-  element.classList.add("selected");
-  setDoc(doc(db,"supportChats",uid),{newMsg:false},{merge:true});
-  chatHeader.innerHTML=`<h2>${userInfo.name||"User"}</h2>
-  <small>${userInfo.email||""} ${userInfo.typing?"• typing...":""}</small>`;
-
-  const q=query(collection(db,"supportChats",uid,"messages"),orderBy("createdAt","asc"));
-  onSnapshot(q,(snapshot)=>{
-    chatBox.innerHTML="";
-    snapshot.forEach(s=>{
-      const d=s.data();
-      const m=document.createElement("div");
-      m.className="msg "+(d.from==="user"?"user-msg":"admin-msg");
-      if(d.from==="user"&&!d.seen)m.classList.add("unseen");
-      m.innerHTML=`${d.text}<br><small style="font-size:10px;opacity:0.7;">${formatTime(d.createdAt)}</small>`;
-      if(d.from==="user"&&!d.seen)setDoc(s.ref,{seen:true},{merge:true});
-      chatBox.appendChild(m);
-    });
-    chatBox.scrollTop=chatBox.scrollHeight;
-  });
-}
-
-// ✅ Send message
-sendBtn.addEventListener("click",sendMessage);
-msgInput.addEventListener("keypress",e=>{
-  if(e.key==="Enter"){ e.preventDefault(); sendMessage(); }
-});
-
-async function sendMessage(){
-  if(!currentUID)return;
-  const text=msgInput.value.trim();
-  if(!text)return;
-  await addDoc(collection(db,"supportChats",currentUID,"messages"),{
-    text,from:"admin",createdAt:serverTimestamp(),seen:false
-  });
-  msgInput.value="";
-  chatBox.scrollTop=chatBox.scrollHeight;
-}
-
-// ✅ Typing indicator
-msgInput.addEventListener("input",()=>{
-  setDoc(doc(db,"supportStatus","admin"),{typing:true},{merge:true});
-  clearTimeout(typingTimeout);
-  typingTimeout=setTimeout(()=>setDoc(doc(db,"supportStatus","admin"),{typing:false},{merge:true}),1000);
-});
-
-// ✅ Time formatter
-function formatTime(ts){
-  if(!ts) return "";
-  const date = ts.toDate ? ts.toDate() : ts;
-  let hrs=date.getHours(), mins=date.getMinutes();
-  const ampm=hrs>=12?"PM":"AM";
-  hrs=hrs%12||12;
-  mins=mins<10?"0"+mins:mins;
-  return `${hrs}:${mins} ${ampm}`;
-}
-</script>
 
 <script>
-/* ✅ Mobile keyboard fix */
-function setVh(){document.documentElement.style.setProperty("--vh",`${window.innerHeight*0.01}px`);}
-setVh();
-window.addEventListener("resize",setVh);
-window.addEventListener("orientationchange",setVh);
+  const files = [
+    'goodnews',
+    'notyfication',
+    'admin-livesupport',
+    'DepositRequest',
+    'publickannouncment',
+    'Giftadmin',
+    'announcements',
+    'WITHROWAL REQUEST',
+    'Userreport',
+    'admin-support',
+    'admin_cleanup'
+  ];
+
+  // 🔴 Show dot for unseen files
+  window.onload = () => {
+    files.forEach(file => {
+      const seen = localStorage.getItem(`seen_${file}`);
+      const dot = document.getElementById(`dot-${file}`);
+      if (!seen) {
+        dot.style.display = 'inline-block';
+      } else {
+        dot.style.display = 'none';
+      }
+    });
+  };
+
+  // 🟢 Open file and mark as seen
+  function openFile(filename, key) {
+    document.getElementById('viewer').src = filename;
+    localStorage.setItem(`seen_${key}`, 'true');
+    document.getElementById(`dot-${key}`).style.display = 'none';
+  }
 </script>
 
 </body>
